# hello-robot

./: README.md  nigit.json
clbrobot_project/: .gitmodules
clbrobot_project/clbrobot/: CMakeLists.txt
clbrobot_project/clbrobot/launch/: auto_slam.launch  bringup.launch  camera.launch  hector_slam.launch  multi_goals.launch  navigate.launch
clbrobot_project/clbrobot/launch/depth_camera/astra/: astra_xtion_gmapping.launch
clbrobot_project/clbrobot/launch/depth_camera/kinect_v2/: kinectv2_gmapping.launch  kinectv2_laser.launch  kinectv2_navigate.launch
clbrobot_project/clbrobot/launch/depth_camera/xtion/: 3dsensor.launch  xtion_gmapping.launch  xtion_navigate.launch
clbrobot_project/clbrobot/launch/include/cartographer/: cartographer_2d.launch
clbrobot_project/clbrobot/launch/lidar/: lidar_laser.launch  rplidar_a2.launch  rplidar_a3.launch
clbrobot_project/clbrobot/launch/teleop/: ps3.launch
clbrobot_project/clbrobot/maps/: house.pgm  house.yaml
clbrobot_project/clbrobot/rviz/: slam.rviz
clbrobot_project/riki_follower/src/: follower.cpp
clbrobot_project/riki_lidar_follower/launch/: laser_follower.launch
hello_robot/: CMakeLists.txt  READMD.md  package.xml
hello_robot/launch/: bringup.launch  rikibase.xml
hello_robot/param/imu/: imu_calib.yaml
rikirobot_urdf/: CMakeLists.txt  package.xml
rikirobot_urdf/launch/: display.launch  gazebo.launch
rikirobot_urdf/urdf/: rikirobot_urdf.urdf
rplidar_ros/launch/: rplidar.launch
tankCar/: READMD.md  package.xml
