<?xml version="1.0.0"?>
<package format="2">
  <name>hello_robot</name>
  <version>1.0.0</version>
  <description>Two wheel differential drive ROS platform</description>
  <maintainer email="pi@TODO.com">t</maintainer>
  <license>BSD</license>

  <author email="pi@TODO.com">kevin</author>

  <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>riki_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    
    <build_export_depend>riki_msgs</build_export_depend>
    
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>rosserial_python</exec_depend>
    <exec_depend>tf</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>riki_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>gmapping</exec_depend>
    <exec_depend>map_server</exec_depend>  
    <exec_depend>move_base</exec_depend>
    <exec_depend>amcl</exec_depend>
    <exec_depend>xv-11-laser-driver</exec_depend>
    <exec_depend>imu-filter-madgwick</exec_depend>
    <exec_depend>imu_calib</exec_depend>
    <exec_depend>riki_pid</exec_depend>
  <export>
  </export>
</package>
